# middle-manager

./: README.md  README_v2.md  chronos_graph.py  chronos_llm.py  chronos_mcp.py  chronos_sleep.py  core_models.py  engine.py  mcp_server.py  pipeline.py  query_engine.py  test_local.py  test_mcp.py  verify_all.sh
.trae/documents/: middle_manager_implementation_plan.md
.trae/specs/design-middle-management-ai-repo/: 100_pros_cons.md  architecture_and_readme.md  checklist.md  github_repos_research.md  products_research.md  spec.md  tasks.md
chronos-mcp/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
chronos-mcp-ts/: jest.config.js  package-lock.json  package.json  tsconfig.json
chronos-mcp-ts/.github/workflows/: publish-npm.yml
chronos-mcp-ts/src/: graph.ts  llm.ts  mcp.ts  server.ts  sleep.ts
chronos-mcp-ts/tests/: core.test.ts
chronos-mcp/.github/workflows/: publish-pypi.yml
chronos-mcp/examples/: demo_minimax.py
chronos-mcp/src/chronos/: __init__.py  graph.py  llm.py  mcp.py  server.py  sleep.py
chronos-mcp/tests/: test_core.py
middle-manager-ai/: docker-compose.yml
middle-manager-ai/backend/: middle_manager.db
middle-manager-ai/backend/app/: agents.py  main.py  models.py  skills.py
middle-manager-ai/frontend/src/app/ceo-dashboard/: page.tsx
middle-manager-ai/frontend/src/app/employee-dashboard/: page.tsx
